# SyncFlow

./: ARCHITECTURE_STANDARDS.md  FRONTEND_IMPLEMENTATION_PLAN.md  README.md  REQUIREMENTS.md  TESTING_SUMMARY.md  nginx.conf
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 20251218_0739_69b72f52ca20_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  exceptions.py  logging.py  uuid_utils.py
backend/app/db/: base.py  session.py
backend/app/repositories/: __init__.py  batch_repository.py  entity_config_repository.py  failed_record_repository.py  mapping_repository.py  schedule_repository.py  sync_state_repository.py
backend/app/routers/: __init__.py  entity_router.py  mapping_router.py  monitoring_router.py  schedule_router.py  sync_router.py
backend/app/schemas/: __init__.py  entity_schemas.py  monitoring_schemas.py  schedule_schemas.py  sync_schemas.py
backend/app/services/: __init__.py
backend/app/services/connector_client/: __init__.py  client.py
backend/app/services/delta/: __init__.py  detector.py  engine.py  hash_strategy.py  rowversion_strategy.py
backend/app/services/identity/: __init__.py  bk_hash.py  data_hash.py  engine.py  rowversion.py
backend/docs/: API_SUMMARY.md  ARCHITECTURE_OVERVIEW.md  CONNECTOR_V2_COMPARISON.md  DATABASE_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PROGRESS_LOG.md  PROJECT_COMPLETION_SUMMARY.md  REMAINING_TASKS.md
backend/tests/: conftest.py  test_delta.py  test_identity.py  test_integration.py  test_normalization.py  test_parent_child.py
(+140 files in other folders)
